se avanza en la estandarización de la estructura de usuario a nivel de toda la aplicación, con lso diferentes compoentnes que tiene la entidad y la aplicaicón, pues a necesidad